tests/build/cases/widget/unknown_inherit.stderr
error[E0412]: cannot find type `Unknown` in this scope
 --> cases/widget/unknown_inherit.rs:4:23
  |
4 | pub struct TestWidget(Unknown);
  |                       ^^^^^^^ not found in this scope
  |
help: there is an enum variant `core::fmt::rt::v1::Alignment::Unknown` and 3 others; try using the variant's enum
  |
4 | pub struct TestWidget(core::fmt::rt::v1::Alignment);
  |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 | pub struct TestWidget(crate::unic_langid::LanguageIdentifierError);
  |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 | pub struct TestWidget(std::fmt::rt::v1::Alignment);
  |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0599]: no method named `on_start__` found for struct `TestWidget` in the current scope
 --> cases/widget/unknown_inherit.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | method `on_start__` not found for this struct
  | method not found in `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
